[package]
name = "soyjak-archiver"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A simple archival tool for Soyjak Party"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["stream"] }
scraper = "0.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
